# WebDownloader

./: .dockerignore  .gitignore  Dockerfile  README.md  cfg.env  docker-compose.yml  docker.env  example.env  requirements-dev.txt  requirements.txt  run.py  setup.cfg  setup.py
API/: __init__.py  config.py  factory.py  run.py
API/resources/: __init__.py  handlers.py  tasks.py  websiteProcessors.py
Backend/: Dockerfile  app.py  requirements.txt
Backend/API/core/: __init__.py  factory.py
Backend/API/routes/: __init__.py  new_tasks.py  views.py
Frontend/: Dockerfile
Frontend/client/: decs.d.ts  package-lock.json  package.json
Frontend/client/src/: App.vue  main.js  main.js.map  main.ts
WebDownloader/: Dockerfile  app.py  dump.rdb  gunicorn_config.py  requirements.txt  wsgi.py
WebDownloader/WebDownloader/: __init__.py
WebDownloader/WebDownloader/api/: __init__.py
WebDownloader/WebDownloader/core/: config.py  factory.py
WebDownloader/WebDownloader/jobs/: celery.py  tasks.py  worker.py
WebDownloader/api/: __init__.py  app.py
WebDownloader/api/routes/: __init__.py  new_tasks.py  views.py
WebDownloader/api/schemas/: tasks.py
WebDownloader/api/task/: __init__.py  schemas.py  views.py
WebDownloader/core/: config.py  factory.py
WebDownloader/jobs/: __init__.py  celery.py  task_management.py  tasks.py  worker.py
Worker/: Dockerfile
app/: __init__.py
app/api/: __init__.py  run.py
app/core/: __init__.py  config.py  factory.py
app/jobs/: __init__.py  run.py  task_management.py  tasks.py
deployment/: api-deployment.yaml  api-service.yaml  configmap.yaml  docker-env-configmap.yaml  ingress.yaml  prod.env  redis-deployment.yaml  redis-service.yaml  vue-deployment.yaml  vue-service.yaml  worker-deployment.yaml
tests/: fixtures.py  test_celery.py  test_functional.py
(+34 files in other folders)
