[metadata]
name = WebDownloader
author = Jakub Kowalski
license_file = LICENSE
version = file: VERSION
description = Tool for downloading text & images from websites made with Flask & celery
long_description = file: README.md
author_email = k_jakub@icloud.com
url = https://github.com/j-kk/WebDownloader/
classifiers =
        License :: OSI Approved :: MIT License
        Programming Language :: Python
        Programming Language :: Python :: 3 :: Only
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Development Status :: 4 - Beta
        Environment :: No Input/Output (Daemon)
        Environment :: Console

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    amqp==2.5.2
    aniso8601==8.0.0
    beautifulsoup4==4.8.2
    billiard==3.6.3.0
    celery==4.4.1
    certifi==2019.11.28
    chardet==3.0.4
    click==7.1.1
    decorator==4.4.2
    Flask==1.1.1
    Flask-RESTful==0.3.8
    idna==2.9
    itsdangerous==1.1.0
    Jinja2==2.11.1
    kombu==4.6.8
    MarkupSafe==1.1.1
    marshmallow==3.5.1
    pytz==2019.3
    redis==3.4.1
    requests==2.23.0
    six==1.14.0
    soupsieve==2.0
    urllib3==1.25.8
    validators==0.14.2
    vine==1.3.0
    Werkzeug==1.0.0


[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    pytest

docs =
    sphinx

;[options.entry_points]
;console_scripts =
;    WebDownloader = WebDownloader.api:run

[test]
addopts = --verbose
extras = True

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    WebDownloader